<resources>
    <string name="app_name">AGEMAN</string>
    <string name="home">Home</string>
    <string name="workshop">Workshop</string>
    <string name="scan_activity_for_classification">Scan Activity for Classification</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="email">Email</string>
    <string name="login">Log In</string>
    <string name="password">Password</string>
    <string name="sign_un">Sign Up</string>
    <string name="username">Username</string>
    <string name="add_workshop">Add Workshop</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="noRek">123-345-678-1011</string>
    <string name="email_error">Invalid email format</string>
    <string name="password_error">Password must not be less than 8 characters</string>
    <string name="payment">Payment</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_text">Lets explore the enchanting world of Balinese dance together!</string>
    <string name="detaildescription">Lorem ipsum dolor sit amet consectetur. Ut nisl mi porta iaculis lectus porttitor massa mauris laoreet. Sed faucibus viverra vitae id ac. Neque sit in sed at id hendrerit. Id facilisis egestas pulvinar imperdiet lorem odio diam porttitor orci. Nisl hac sit semper volutpat felis cursus dignissim odio id. Turpis.</string>
    <string name="confirm">Confirm</string>
    <string name="wrokshop">Wrokshop</string>
    <string name="title">Title</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="proof_of_payment">Proof of Payment</string>
    <string name="colon">:</string>
    <string name="owner">Owner</string>
    <string name="extend">Extend</string>
    <string name="status">Status :</string>
    <string name="process">process</string>
    <string name="detail">Detail</string>
    <string name="sanggar">Sanggar</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="register_for_workshop">Register for Workshop</string>
    <string name="gender">Gender</string>
    <string name="back">Back</string>
    <string name="process_reg">Registration is being processed, Please wait for a while</string>
    <string name="percentage">Percentage :</string>
    <string name="more_detail">More Detail</string>
    <string name="create_new_password">Create New Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="scroll_item_will_be_here">Scroll item will be here</string>
    <string name="tabs_for_admin">Tabs for admin</string>
    <string name="price">Price</string>
    <string name="active">Active</string>
    <string name="pending">Pending</string>
    <string name="inactive">Inactive</string>
    <string name="delete">Delete</string>
    <string name="package_name">Package</string>
    <string name="watch_the_video_on_youtube">Watch the video on YouTube</string>
    <string name="bank_account_number">Bank Account Number</string>
    <string name="after_payment">Proof of transfer is required for payment verification.</string>
    <string name="age">Age</string>
    <string name="empty_list">No items found</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="add_wrokshop">Add Wrokshop</string>
    <string name="progress_workshop">Workshop creation is in progress, please wait a while</string>
    <string name="being_processed">Being Processed</string>
    <string name="capture_image">Capture Image</string>
    <string name="unknown">Unknown</string>
    <string name="try_again">Try Again</string>
    <string name="unknown_classification">Image classified as \"Unknown\" due to insufficient information.</string>
    <string name="error_classification">An error has occurred. Please try again.</string>
    <string name="error">Something went wrong</string>
    <string name="bank">BANK BCA</string>

</resources>